--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
         </div>
       </div> <!-- aside content wrapper ends -->
     </aside>
+
+    <section class="features">
+      <article class="features-items">
+        <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Private chef team providing on deamand meals - just like your team kitchen.</p>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">5 outdoor obstacle courses, including private beach 1\2 mile from bungalow.</p>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Retreat facilitor to manage your day to day activities so you all get a chance to reset.</p>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Dedicated computer rooms for times that you must wifi.</p>
+      </article>
+    </section>
+
+    <section class="reviews">
+        <div class="content-wrapper">
+          <h1>Be a better team in 5 days, like these.</h1>
+        </div>
+        <div><h1>LaCrue Bottling Co. October 2018</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipicing elit, sed do elusmod tempor incididunt ut labore et dolore magna aliqua. Yt enimad mimim veneam , quis nostrud exercitation ullamco laboris no=isi ut aliguip ex ea commodo consequat. Duis aute irure doolor in reprehenderit in voluptate velit esse cillun dolore eu fugiat nulla pariatur.</p>
+        </div>
+      </section>
+
   </main> <!-- main wrapper -->
   <footer>
     <div class="content-wrapper">
@@ -72,13 +100,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+              <a href="https://www.facebook.com/Arnieb/" target="_blank"></a>
             </p>
             <p>
-              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+              <a href="https://twitter.com/Arnieb" target="_blank"></a>
             </p>
             <p>
-              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+              <a href="https://www.instagram.com/Arnieb/" target="_blank"></a>
             </p>
           </div>
         </div>
