--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
       </nav>
     </div>
   </header>
+  
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
-    <aside>
+
+    <aside>      
       <div class="content-wrapper">
         <div class="form-description">
-          <h3>Want to join the next retreat?</h3>
+          <h2>Want to join the next retreat?</h2>
           <p>
             Find out when we are holding our next retreat and how your company or team can sign up!
           </p>
@@ -60,37 +62,51 @@
     </aside>
 
     <section class="features">
-      <article class="features-items">
-        <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
-        <p class="fontawesome-icon"></p>
-        <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-        <p class="fontawesome-icon"></p>
-        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-        <p class="fontawesome-icon"></p>
-        <p class="features-item-description">Private chef team providing on deamand meals - just like your team kitchen.</p>
-        <p class="fontawesome-icon"></p>
-        <p class="features-item-description">5 outdoor obstacle courses, including private beach 1\2 mile from bungalow.</p>
-        <p class="fontawesome-icon"></p>
-        <p class="features-item-description">Retreat facilitor to manage your day to day activities so you all get a chance to reset.</p>
-        <p class="fontawesome-icon"></p>
-        <p class="features-item-description">Dedicated computer rooms for times that you must wifi.</p>
-      </article>
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+          <div class="features-items">
+            <article>  
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+            </article>
+            <article>
+                  <p class="fontawesome-icon"></p>
+                   <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+            </article>
+            <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Private chef team providing on deamand meals - just like your team kitchen.</p>
+            </article>
+            <article>
+                 <p class="fontawesome-icon"></p>
+                 <p class="features-item-description">5 outdoor obstacle courses, including private beach 1\2 mile from bungalow.</p>
+            </article>
+            <article>
+                 <p class="fontawesome-icon"></p>
+                 <p class="features-item-description">Retreat facilitor to manage your day to day activities so you all get a chance to reset.</p>
+            </article>
+            <article>
+                  <p class="fontawesome-icon"></p>
+                  <p class="features-item-description">Dedicated computer rooms for times that you must wifi.</p>
+           </article>  
+          </div>
+       </div>
     </section>
 
     <section class="reviews">
-        <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
-        <div>    
-          <h3>LaCrue Bottling Co. October 2018</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipicing elit, sed do elusmod tempor incididunt ut labore et dolore magna aliqua. Yt enimad mimim veneam , quis nostrud exercitation ullamco laboris no=isi ut aliguip ex ea commodo consequat. Duis aute irure doolor in reprehenderit in voluptate velit esse cillun dolore eu fugiat nulla pariatur.</p>
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like this one.</h2>
+          <article>
+            <div>    
+             <h3>LaCrue Bottling Co. October 2018</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipicing elit, sed do elusmod tempor incididunt ut labore et dolore magna aliqua. Yt enimad mimim veneam , quis nostrud exercitation ullamco laboris no=isi ut aliguip ex ea commodo consequat. Duis aute irure doolor in reprehenderit in voluptate velit esse cillun dolore eu fugiat nulla pariatur.</p>
+            </div>
+          </article>  
       </div>
-        
-      </div>
-      </section>
+    </section>
 
   </main> <!-- main wrapper -->
-
-  
+ 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
@@ -122,6 +138,7 @@
       <p>Copyright 2018 | Unplugged</p>
     </div>
   </footer>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
