--- a/about/index.html
+++ b/about/index.html
@@ -13,6 +13,8 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -43,7 +45,7 @@
         <section class="mission">
               
             <div class="content-wrapper">
-                <h1>Our Mission - we want to make you the team you always wanted to be.<h1>
+                <h2>Our Mission - we want to make you the team you always wanted to be.<h2>
 
                 <div class="mission-content">
                     <p>Lorem ipsum dolor sit amet, consectetur adipicing elit, sed do elusmod tempor incididunt ut labore et dolore magna aliqua.  Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
