--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +50,7 @@
     <aside>      
       <div class="content-wrapper">
         <div class="form-description">
-          <h2>Want to join the next retreat?</h2>
+          <h3>Want to join the next retreat?</h3>
           <p>
             Find out when we are holding our next retreat and how your company or team can sign up!
           </p>
