--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   
   <main>
     <section class="hero-area">
+        
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
@@ -99,6 +100,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
           <article>
+              <figure>
+                  <img src="img/omar.jpg">
+              </figure>
             <div>    
              <h3>LaCrue Bottling Co. October 2018</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipicing elit, sed do elusmod tempor incididunt ut labore et dolore magna aliqua. Yt enimad mimim veneam , quis nostrud exercitation ullamco laboris no=isi ut aliguip ex ea commodo consequat. Duis aute irure doolor in reprehenderit in voluptate velit esse cillun dolore eu fugiat nulla pariatur.</p>
