--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,9 @@
         </section> 
 
         <section class="map">
-         <figure></figure>        
+         <figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4481.176353720108!2d-121.39599811585227!3d38.48206591285527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac449f8796ecb%3A0x5ba366bec4791c1b!2s8401+Gerber+Rd%2C+Sacramento%2C+CA+95828!5e0!3m2!1sen!2sus!4v1555720611103!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+         </figure>        
           </section>
 
           <section class="contact-section">
