add social icons

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="../css/main.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 
@@ -100,17 +100,17 @@
               </address>
               <div class="social">
                 <h4>Social</h4>
-                <div class="social-icons">
-                  <p>
-                    <a href="https://www.facebook.com/Arnieb/" target="_blank"></a>
-                  </p>
-                  <p>
-                    <a href="https://twitter.com/Arnieb" target="_blank"></a>
-                  </p>
-                  <p>
-                    <a href="https://www.instagram.com/Arnieb/" target="_blank"></a>
-                  </p>
-                </div>
+                 <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/Arnieb/" target="_blank"><i class="fab fa-facebook"></i></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/Arnieb" target="_blank"><i class="fab fa-twitter"></i></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/Arnieb/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </p>
+          </div>
               </div>
             </div> <!-- footer content ends -->
           </div>
