--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com/Arnieb/" target="_blank"></a>
+              <a href="https://www.facebook.com/Arnieb/" target="_blank"><i class="fab fa-facebook"></i></a>
             </p>
             <p>
-              <a href="https://twitter.com/Arnieb" target="_blank"></a>
+              <a href="https://twitter.com/Arnieb" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="https://www.instagram.com/Arnieb/" target="_blank"></a>
+              <a href="https://www.instagram.com/Arnieb/" target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
