--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,10 @@
   <header>
       
       <div class="content-wrapper">
-        <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+        <figure>
+        <a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+        </figure>
         <div class="header-divider"></div>
         <nav>
              <ul>
@@ -68,15 +71,14 @@
           <section class="contact-section">
               
           <div class="contact-wrapper"> 
-           <h1>Contact us because you need this</h1>              
-            <address class="contact">
-              <div>
-              <h2>general information</h2>
-                <p>333 Main St, Lake Geneva, WI 53147<br>
-                555-555-5555<br>
-                hello@unplugged.com</p>
-              </div>
-              <div>
+            <h1>Contact us because you need this</h1>              
+              <address class="contact">
+                <div>
+                <h2>general information</h2>
+                  <p>333 Main St, Lake Geneva, WI 53147<br>555-555-5555<br>
+                    hello@unplugged.com</p>
+                 </div>
+                <div>
               <h2>Chat with a facilitor</h2>
               <p>555-555-5556<br>
                  facilitator@unplugged.com</p>
